fix positioning on small screens

--- a/wsgi/static/css/styles.css
+++ b/wsgi/static/css/styles.css
@@ -562,7 +562,7 @@ div.col-md-9 a {
   font-size: 14px;
 }
 div.content li img.img-responsive {
-  width: 100%;
+  width: 130%;
   max-width: 85px;
 }
 /* Extra small devices (phones, less than 768px) */
